--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.reactnativecommunity.webview">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.reactnativecommunity.jotformwebview">
     <application>
         <provider
-        android:name=".RNCWebViewFileProvider"
+        android:name=".RNCJotFormWebViewFileProvider"
         android:authorities="${applicationId}.fileprovider"
         android:exported="false"
         android:grantUriPermissions="true">
